fix(sidebar): resize an scroll overflow (#466)

--- a/styles/app/common/form.module.css
+++ b/styles/app/common/form.module.css
@@ -1,6 +1,6 @@
 .videoForm {
 	z-index: 10;
-	overflow: scroll;
+	overflow-y: auto;
 
 	label {
 		margin-bottom: 10px;
