--- a/styles/app/components/sidebar/nav.module.css
+++ b/styles/app/components/sidebar/nav.module.css
@@ -1,5 +1,5 @@
 .sideBarNav {
-	overflow: scroll;
+	overflow-y: scroll;
 	height: 100%;
 
 	details {
